--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workshop",
+  "name": "vue-spa-workshop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,11 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "core-js": "^3.6.5",
+    "reflect-metadata": "^0.1.13",
+    "roboto-fontface": "^0.10.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-meta": "^2.4.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.4.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
