Added some quick implemented rest service.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "server": "concurrently --kill-others \"json-server --id uuid --no-cors --read-only --watch src/data/projects.db.json\" \"vue-cli-service serve\"",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:unit:coverage": "vue-cli-service test:unit --collectCoverage",
@@ -11,13 +12,17 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
+    "axios": "^0.21.1",
+    "concurrently": "^6.0.0",
     "core-js": "^3.6.5",
     "fuse.js": "^6.4.6",
+    "global": "^4.4.0",
     "portal-vue": "^2.1.7",
     "reflect-metadata": "^0.1.13",
     "roboto-fontface": "^0.10.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-debounce-decorator": "^1.0.1",
     "vue-meta": "^2.4.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
